--- a/client/style.css
+++ b/client/style.css
@@ -1,6 +1,6 @@
 ﻿/* fond de page */
 body {
-  background-image: linear-gradient(0deg, slateblue, black, black);
+  background-image: linear-gradient(-45deg, red, goldenrod, green);
   background-size: 100%;
   background-repeat: no-repeat;
   color: white;
